--- a/clearfix.css
+++ b/clearfix.css
@@ -6,7 +6,7 @@
 
 .horizontal{
   list-style-type: none;
-  background-color: gray;
+  background-color: pink;
   padding: 0;
   margin: 0;
   text-align: right;
